[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genaiApps"
version = "0.1.0"
description = "LangGraph agent project"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]   # <— only package(s) under agents/
exclude = ["RAGs*", "other*", "basicApps*"]